[project]
name = "NTL-systoolbox"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.14.3"

dependencies = [
	"psutil==7.2.2"
]

[project.optional-dependencies]
dev = [
	"ruff>=0.15.5",
	"black==26.3.0",
	"click==8.3.1",
	"mypy_extensions==1.1.0",
	"NTL-systoolbox @ file:///home/h33n0k/dev/ntl-systoolbox-nlvq",
	"packaging==26.0",
	"pathspec==1.0.4",
	"platformdirs==4.9.4",
	"pytokens==0.4.1",
	"ruff==0.15.5"
]

[project.urls]
Repository = "https://github.com/EPSI-TOULOUSE/ntl-systoolbox-nlvq.git"
Issues = "https://github.com/EPSI-TOULOUSE/ntl-systoolbox-nlvq.git/issues"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true
preview = true

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
lint.select = [ "E", "F", "I", "B", "UP", "SIM" ]
lint.ignore = [ "E203" ]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ntl"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
